Use external JWT for auth (#217)
* Used external JWT for auth

* Fix for campaign learning resources

* Fix ci
